Docs: improved comment

--- a/main.ipynb
+++ b/main.ipynb
@@ -66,21 +66,20 @@
     "\n",
     "The symbol list from Financialmodelingprep is downloaded and merged with the list of symbols that have financial reports (e.g. stock of a company)\n",
     "\n",
-    "Finally we filter the symbols of companies that are not traded in US.\n",
     "------------------------------------------------------------------------\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching and Filtering Data: 100%|██████████| 100/100 [01:02<00:00,  1.60it/s]\n"
+      "Fetching and Filtering Data: 100%|██████████| 200/200 [02:15<00:00,  1.47it/s]\n"
      ]
     }
    ],
@@ -98,8 +97,8 @@
     "# Filter stocks based on exchangeShortName\n",
     "filtered_data = merged_data[merged_data[\"exchangeShortName\"].isin([\"ASX\", \"ETF\", \"NASDAQ\", \"NYSE\", \"OTC\"])]\n",
     "\n",
-    "# Sample of 100 symbols\n",
-    "filtered_data = filtered_data.sample(n=100, random_state=42)\n",
+    "# Sample of 100 symbols (TO BE REMVOED IN FINAL VERSION)\n",
+    "filtered_data = filtered_data.sample(n=200, random_state=42)\n",
     "\n",
     "# Fetch, filter, and merge profile data \n",
     "filtered_and_merged_data = filter_and_merge_data(filtered_data, API_KEY)\n"
@@ -140,9 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching Financial Data: 100%|██████████| 49/49 [01:44<00:00,  2.13s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract the symbol list\n",
     "symbol_list = filtered_and_merged_data['symbol']\n",
@@ -165,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
